solving viewheight issues on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -187,6 +187,10 @@ p {
   color: hsl(0, 96%, 41%);
 }
 
+.dropdown-btn:focus {
+  animation: none;
+}
+
 .forecast-day {
   padding: 0;
   text-align: center;
@@ -242,10 +246,21 @@ p {
     display: block;
     margin: 0 auto;
   }
+  .content {
+    min-height: calc(var(--vh) * 100);
+    /* min-height: 100vh;
+    min-height: -moz-available;
+    min-height: -webkit-fill-available;
+    min-height: fill-available; */
+  }
 
   .weather {
-    width: 70vw;
-    min-height: calc(800px - 20%);
+    width: 90vw;
+    /* min-height: calc(800px - 20%); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
   }
 
   .weather-details {
